crates/hexeract-macros/tests/ui/fail_generic_impl_handler.stderr
error: #[handler] does not support generic handlers
  --> tests/ui/fail_generic_impl_handler.rs:10:5
   |
10 | impl<T> GenericHandler<T> {
   |     ^^^
